Corregi la semantica de todos los archivos

--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./assets/img/favicon-migthyDucks.png"
+    />
+    <title>Contact</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
-  <title>Migthy Duck</title>
-</head>
+  <body>
+    <header>
+      <h1>Mighty Ducks Hockey League</h1>
+      <div class="container-text-logo">
+        <h2 id="subtitulo">Contact</h2>
+        <img
+          id="logo"
+          src="./assets/img/LogoMightyducks-01.png"
+          alt="Logo del equipo"
+        />
+      </div>
+    </header>
 
-<body>
-  <header>
-    <h1>Mighty Ducks Hockey League</h1>
-    <div class="container-text-logo">
-      <h2 id="subtitulo">Contact</h2>
-      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
-    </div>
-  </header>
-
-  <div class="container-nav-main">
-    <nav class="nav-c">
-      <a href="./index.html">Home</a>
-      <a href="./about.html">About</a>
-      <a href="#">Contact</a>
-      <a href="./rules.html">Rules & Policies</a>
-      <a href="./game_info.html">Game Information</a>
-      <a href="./registration.html">Registration </a>
-    </nav>
     <main>
-      <article class="container-contact">
-        <h2>Contact us:</h2>
-        <p class="paragraph-contact">
-          Please email us at
-          <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
-        </p>
-        <p class="paragraph-contact">
-          We reply to your email as soon as we can
-        </p>
-      </article>
-      <img src="./assets/img/hockey3.jpg" alt="Dos jugadores de hockey">
+      <nav class="nav-c">
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="#">Contact</a>
+        <a href="./rules.html">Rules & Policies</a>
+        <a href="./game_info.html">Game Information</a>
+        <a href="./registration.html">Registration </a>
+      </nav>
+      <div>
+        <article class="container-contact">
+          <h2>Contact us:</h2>
+          <p class="paragraph-contact">
+            Please email us at
+            <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
+          </p>
+          <p class="paragraph-contact">
+            We reply to your email as soon as we can
+          </p>
+        </article>
+        <img src="./assets/img/hockey3.jpg" alt="Dos jugadores de hockey" />
+      </div>
     </main>
-  </div>
-</body>
-
+  </body>
 </html>
