--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
   <title>Migthy Duck</title>
 </head>
 
@@ -15,10 +15,11 @@
     <h1>Mighty Ducks Hockey League</h1>
     <div class="container-text-logo">
       <h2 id="subtitulo">Upcoming Events</h2>
-      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
+      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
     </div>
   </header>
-  <div class="container-nav-main">
+
+  <main>
     <nav>
       <a href="#">Home</a>
       <a href="./about.html">About</a>
@@ -27,7 +28,7 @@
       <a href="./game_info.html">Game Information</a>
       <a href="./registration.html">Registration </a>
     </nav>
-    <main>
+    <div>
       <article class="container-events">
         <h3>August 4</h3>
         <p class="p-events">MDSL Fundraiser</p>
@@ -42,9 +43,9 @@
           First Game of the Season (Check Game Schedule for details)
         </p>
       </article>
-      <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey">
-    </main>
-  </div>
+      <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
+    </div>
+  </main>
 </body>
 
 </html>
