--- a/rules.html
+++ b/rules.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
-    <title>Mighty Ducks Hockey League</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
+    <title>Rules</title>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="container-text-logo">
             <h2 id="subtitulo">Rules & Policies</h2>
-            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
+            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
         </div>
     </header>
-    <div class="container-nav-main">
+    <main>
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
@@ -27,7 +27,7 @@
             <a href="./game_info.html">Game Information</a>
             <a href="./registration.html">Registration </a>
         </nav>
-        <main>
+        <div>
             <section class="section-rules">
                 <h2>RULES OF PLAY & POLICIES</h2>
                 <div class="container-list">
@@ -44,46 +44,68 @@
                     </dl>
                     <h4 id="subRules">IHF FIELD REGULATIONS</h4>
                     <ol>
-                        <li>DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
-                            a given maximum and minimum width and length. These dimensions should be
-                            adhered to for all fields used by teams under 12 and older.</li>
-                        <li>COMPETITION FIELDS. Fields used within the competition program must be
-                            a minimum of 100 x 60 yards.Leagues, districts or associations participating in
-                            the state competition program that are unable to provide a field that meets these
-                            minimum requirements must advise the State Competition Board which will
-                            assign its Fields Committee to inspect the field and recommend to the Board
-                            whether or not a waiver of the minimum dimensions should be granted. Teams
-                            from leagues, districts or associations that are unable to provide an acceptable
-                            field may be required to play all their games away.</li>
-                        <li>FIELDS USED BY YOUNG AGE GROUPS
+                        <li>
+                            DIMENSIONS.IHF Law 1 provides for flexible external field
+                            dimensions within a given maximum and minimum width and length.
+                            These dimensions should be adhered to for all fields used by
+                            teams under 12 and older.
+                        </li>
+                        <li>
+                            COMPETITION FIELDS. Fields used within the competition program
+                            must be a minimum of 100 x 60 yards.Leagues, districts or
+                            associations participating in the state competition program that
+                            are unable to provide a field that meets these minimum
+                            requirements must advise the State Competition Board which will
+                            assign its Fields Committee to inspect the field and recommend
+                            to the Board whether or not a waiver of the minimum dimensions
+                            should be granted. Teams from leagues, districts or associations
+                            that are unable to provide an acceptable field may be required
+                            to play all their games away.
+                        </li>
+                        <li>
+                            FIELDS USED BY YOUNG AGE GROUPS
                             <ol type="a">
-                                <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
-                                    for older age groups should be progressively larger.</li>
-                                <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
-                                <li>U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
-                                <li> In addition, fields used by young age groups may have their internal dimensions and
-                                    size of goal similarly modified.</li>
+                                <li>
+                                    U-6 play on a field approximately 20 X 40 yards with no
+                                    penalty areas. Fields for older age groups should be
+                                    progressively larger.
+                                </li>
+                                <li>
+                                    U-8 plays on a field 40-50 yards in length and 20-30 yards
+                                    width.
+                                </li>
+                                <li>
+                                    U-10 play on a field 70-80 yards in length and 40-50 yards
+                                    in width.
+                                </li>
+                                <li>
+                                    In addition, fields used by young age groups may have their
+                                    internal dimensions and size of goal similarly modified.
+                                </li>
                             </ol>
                         </li>
                     </ol>
                     <dl>
                         <dt>ALL-PLAY</dt>
                         <dd>
-                            All-play means that every recreation player on every team shall play atleast
-                            fifty percent of each game. Coaches in the competition program are encouraged
-                            to play their players 50% of each game.
+                            All-play means that every recreation player on every team shall
+                            play atleast fifty percent of each game. Coaches in the
+                            competition program are encouraged to play their players 50% of
+                            each game.
                         </dd>
                     </dl>
                     <ul>
-                        <li>A Coach shall be permitted to not play a player 50% of each game
-                            under special circumstances, e.g., unexcused absences from practice
-                            and/or games, ungentlemanly conduct at practice and/or games, and
-                            injuries.</li>
+                        <li>
+                            A Coach shall be permitted to not play a player 50% of each game
+                            under special circumstances, e.g., unexcused absences from
+                            practice and/or games, ungentlemanly conduct at practice and/or
+                            games, and injuries.
+                        </li>
                     </ul>
                 </div>
             </section>
-        </main>
-    </div>
+        </div>
+    </main>
 </body>
 
 </html>
