Correcion de sintaxis terminada

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
   <title>Migthy Duck</title>
 </head>
 
@@ -15,10 +15,9 @@
     <h1>Mighty Ducks Hockey League</h1>
     <div class="container-text-logo">
       <h2 id="subtitulo">Upcoming Events</h2>
-      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
     </div>
   </header>
-
   <main>
     <nav>
       <a href="#">Home</a>
@@ -43,7 +42,7 @@
           First Game of the Season (Check Game Schedule for details)
         </p>
       </article>
-      <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
+      <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey">
     </div>
   </main>
 </body>
