--- a/about.html
+++ b/about.html
@@ -1,75 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="./assets/img/favicon-migthyDucks.png"
-    />
-    <title>About</title>
-  </head>
 
-  <body>
-    <header>
-      <h1>Mighty Ducks Hockey League</h1>
-      <div class="container-text-logo">
-        <h2 id="subtitulo">About MDHL</h2>
-        <img
-          id="logo"
-          src="./assets/img/LogoMightyducks-01.png"
-          alt="Logo del equipo"
-        />
-      </div>
-    </header>
-    <main>
-      <nav class="nav-a">
-        <a href="./index.html">Home</a>
-        <a href="#">About</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./rules.html">Rules & Policies</a>
-        <a href="./game_info.html">Game Information</a>
-        <a href="./registration.html">Registration </a>
-      </nav>
-      <div>
-        <article class="container-about">
-          <h3>Mision</h3>
-          <p>
-            To support young athletes living Chicago's northside neighborhood,
-            who have an interest in learning and playing soccer, with
-            opportunities to learn and practice skills related to the game of
-            hockey, specifically those skills around team cooperation and good
-            sportsmanship
-          </p>
-        </article>
-        <article class="container-about">
-          <h3>Vision</h3>
-          <p>
-            The Mighty Ducks Hockey League aspires to develop strong,
-            well-rounded and mindful athletes through the building of character,
-            self-discipline, and leadership.
-          </p>
-        </article>
-        <article class="container-about">
-          <h3>General Information</h3>
-          <p>
-            The Mighty Ducks Soccer League was established in 1996 to provide
-            athletes residing Chicago's northside neighborhoods an environment
-            in which to learn and play hockey. To be a member of MDHL, you must
-            be between the ages of 4 - 12 and reside a Chicago northside
-            neighborhood. MDHL ran by o small full-time staff, and relies on the
-            generous volunteer time of parents and previous league members
-          </p>
-        </article>
-        <img
-          id="imgAbout"
-          src="./assets/img/hockey2.jpg"
-          alt="Jugadora de Hockey"
-        />
-      </div>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
+  <title>About</title>
+</head>
+
+<body>
+  <header>
+    <h1>Mighty Ducks Hockey League</h1>
+    <div class="container-text-logo">
+      <h2 id="subtitulo">About MDHL</h2>
+      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
+    </div>
+  </header>
+  <main>
+    <nav class="nav-a">
+      <a href="./index.html">Home</a>
+      <a href="#">About</a>
+      <a href="./contact.html">Contact</a>
+      <a href="./rules.html">Rules & Policies</a>
+      <a href="./game_info.html">Game Information</a>
+      <a href="./registration.html">Registration </a>
+    </nav>
+    <div>
+      <article class="container-about">
+        <h3>Mision</h3>
+        <p>
+          To support young athletes living Chicago's northside neighborhood,
+          who have an interest in learning and playing soccer, with
+          opportunities to learn and practice skills related to the game of
+          hockey, specifically those skills around team cooperation and good
+          sportsmanship
+        </p>
+      </article>
+      <article class="container-about">
+        <h3>Vision</h3>
+        <p>
+          The Mighty Ducks Hockey League aspires to develop strong,
+          well-rounded and mindful athletes through the building of character,
+          self-discipline, and leadership.
+        </p>
+      </article>
+      <article class="container-about">
+        <h3>General Information</h3>
+        <p>
+          The Mighty Ducks Soccer League was established in 1996 to provide
+          athletes residing Chicago's northside neighborhoods an environment
+          in which to learn and play hockey. To be a member of MDHL, you must
+          be between the ages of 4 - 12 and reside a Chicago northside
+          neighborhood. MDHL ran by o small full-time staff, and relies on the
+          generous volunteer time of parents and previous league members
+        </p>
+      </article>
+      <img id="imgAbout" src="./assets/img/hockey2.jpg" alt="Jugadora de Hockey">
+    </div>
+  </main>
+</body>
+
 </html>
