--- a/game_info.html
+++ b/game_info.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
   <title>Games Information</title>
 </head>
 
@@ -15,10 +15,9 @@
     <h1>Mighty Ducks Hockey League</h1>
     <div class="container-text-logo">
       <h2 id="subtitulo">Game Information</h2>
-      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+      <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
     </div>
   </header>
-
   <main>
     <nav>
       <a href="./index.html">Home</a>
@@ -124,7 +123,6 @@
               width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-
           <div class="gameLocations">
             <h4>Greenbay</h4>
             <iframe
@@ -132,7 +130,6 @@
               width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-
           <div class="gameLocations">
             <h4>Howard A Yeager</h4>
             <iframe
@@ -140,7 +137,6 @@
               width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-
           <div class="gameLocations">
             <h4>Marjorie P Hart</h4>
             <iframe
@@ -148,7 +144,6 @@
               width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-
           <div class="gameLocations">
             <h4>North Elementary</h4>
             <iframe
@@ -156,7 +151,6 @@
               width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-
           <div class="gameLocations">
             <h4>South Elementary</h4>
             <iframe
