--- a/registration.html
+++ b/registration.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <title>Registration Form</title>
 </head>
 
@@ -18,7 +18,7 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="container-text-logo">
             <h2 id="subtitulo">Contact</h2>
-            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
         </div>
     </header>
     <main>
@@ -37,33 +37,28 @@
                     <form action="./show_data.html" method="get">
                         <fieldset>
                             <label for="namePlayer">Player's First Name:</label>
-                            <input type="text" id="namePlayer" name="first_name" />
+                            <input type="text" id="namePlayer" name="first_name">
                             <label for="lastNamePlayer">Last Name:</label>
-                            <input type="text" id="lastNamePlayer" name="last_name" />
+                            <input type="text" id="lastNamePlayer" name="last_name">
                         </fieldset>
-
                         <fieldset>
                             <label for="streetAddress">Street Address:</label>
-                            <input type="text" id="streetAddress" name="street_address" />
+                            <input type="text" id="streetAddress" name="street_address">
                         </fieldset>
-
                         <fieldset>
                             <label for="city">City:</label>
-                            <input type="text" id="city" name="city" />
+                            <input type="text" id="city" name="city">
                             <label for="zipCode">Zip Code:</label>
-                            <input type="text" id="zipCode" name="zip_code" />
+                            <input type="text" id="zipCode" name="zip_code">
                         </fieldset>
-
                         <fieldset>
                             <label for="birthDate">Birth Date:</label>
-                            <input type="date" id="birthDate" name="birth_date" />
-
+                            <input type="date" id="birthDate" name="birth_date">
                             <label for="gender-female">Female</label>
-                            <input type="radio" id="gender-female" name="gender_mf" value="Female" checked />
+                            <input type="radio" id="gender-female" name="gender_mf" value="Female" checked>
                             <label for="gender-male">Male</label>
-                            <input type="radio" id="gender-male" name="gender_mf" value="Male" checked />
+                            <input type="radio" id="gender-male" name="gender_mf" value="Male" checked>
                         </fieldset>
-
                         <fieldset id="fieldsetSchool">
                             <legend>Which elementary school do you live near?</legend>
                             <label for="school">Closest School:</label>
@@ -76,60 +71,54 @@
                                 <option value="South Elementary">South Elementary</option>
                             </select>
                         </fieldset>
-
                         <fieldset id="fieldsetPosition">
                             <legend>
                                 What position(s) do you normally play? (check all that apply)
                             </legend>
-                            <input type="checkbox" id="forward" name="position_play" value="Forward" />
+                            <input type="checkbox" id="forward" name="position_play" value="Forward">
                             <label for="forward"> Forward</label>
-                            <input type="checkbox" id="midfield" name="position_play" value="Midfield" />
+                            <input type="checkbox" id="midfield" name="position_play" value="Midfield">
                             <label for="midfield"> Midfield</label>
-                            <input type="checkbox" id="defense" name="position_play" value="Defense" />
+                            <input type="checkbox" id="defense" name="position_play" value="Defense">
                             <label for="defense"> Defense</label>
-                            <input type="checkbox" id="goalkeeper" name="position_play" value="Goalkeeper" />
+                            <input type="checkbox" id="goalkeeper" name="position_play" value="Goalkeeper">
                             <label for="goalkeeper"> Goalkeeper</label>
                         </fieldset>
-
                         <fieldset id="fieldsetSizes">
                             <legend>Uniform Size:</legend>
-                            <div>
-                                <div>
-                                    <input type="radio" id="size-ysmall" name="sizes" value="Youth Small" checked />
+                            <fieldset class="container-fieldsets">
+                                <fieldset>
+                                    <input type="radio" id="size-ysmall" name="sizes" value="Youth Small" checked>
                                     <label for="size-ysmall">Youth Small</label>
-                                </div>
-
-                                <div>
-                                    <input type="radio" id="size-mmedium" name="sizes" value="Youth Medium" checked />
+                                </fieldset>
+                                <fieldset>
+                                    <input type="radio" id="size-mmedium" name="sizes" value="Youth Medium" checked>
                                     <label for="size-mmedium">Youth Medium</label>
-                                </div>
-                                <div>
-                                    <input type="radio" id="size-ylarge" name="sizes" value="Youth Large" checked />
+                                </fieldset>
+                                <fieldset>
+                                    <input type="radio" id="size-ylarge" name="sizes" value="Youth Large" checked>
                                     <label for="size-ylarge">Youth Large</label>
-                                </div>
-                                <div>
-                                    <input type="radio" id="size-small" name="sizes" value="Small" checked />
+                                </fieldset>
+                                <fieldset>
+                                    <input type="radio" id="size-small" name="sizes" value="Small" checked>
                                     <label for="size-small">Small</label>
-                                </div>
-                            </div>
-
-                            <div>
-                                <div>
-                                    <input type="radio" id="size-medium" name="sizes" value="Medium" checked />
+                                </fieldset>
+                            </fieldset>
+                            <fieldset class="container-fieldsets">
+                                <fieldset>
+                                    <input type="radio" id="size-medium" name="sizes" value="Medium" checked>
                                     <label for="size-medium">Medium</label>
-                                </div>
-                                <div>
-                                    <input type="radio" id="size-large" name="sizes" value="Large" checked />
+                                </fieldset>
+                                <fieldset>
+                                    <input type="radio" id="size-large" name="sizes" value="Large" checked>
                                     <label for="size-large">Large</label>
-                                </div>
-
-                                <div>
-                                    <input type="radio" id="size-el" name="sizes" value="Extra-Large" checked />
+                                </fieldset>
+                                <fieldset>
+                                    <input type="radio" id="size-el" name="sizes" value="Extra-Large" checked>
                                     <label for="size-el">Extra-Large</label>
-                                </div>
-                            </div>
+                                </fieldset>
+                            </fieldset>
                         </fieldset>
-
                         <fieldset id="fieldsetPermission">
                             <legend>Permission to Play</legend>
                             <p>
@@ -153,13 +142,12 @@
                             </p>
                             <fieldset id="fieldsetSignature">
                                 <label for="parentSignature">Parent/GuardianSignature:</label>
-                                <input type="text" id="parentSignature" name="parent_signature" />
+                                <input type="text" id="parentSignature" name="parent_signature">
                                 <label for="dateSignature">Date:</label>
-                                <input type="date" id="dateSignature" name="date_signature" />
+                                <input type="date" id="dateSignature" name="date_signature">
                             </fieldset>
                         </fieldset>
-
-                        <input type="submit" value="Enviar" id="buttonSubmit" />
+                        <input type="submit" value="Enviar" id="buttonSubmit">
                     </form>
                 </div>
             </section>
